# cyclus

./: .astylerc  .clang-format  .clang-format-ignore  .gitignore  .travis-install.sh  .travis.yml  1_src_enr_rxtr_sink.json  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  DEPENDENCIES.rst  Dockerfile  INSTALL.rst  LICENSE.rst  README.rst  circle.yml  gen_plot.sh  getdecay.py  install.py  install_cyclus_from_source.rst  natu_capacitated.json  nwtrb.xml  plot.p  pyproject.toml  readme.rst  rever.xsh  sample.in  sample.in.xml  sample.recipebook.xml  script.cmake.in  setup.py  swu_capacitated.json  test_foo.py  workflow
agents/: CMakeLists.txt  gisfac.cc  gisfac.h  gisfac_tests.cc  gisfacisa.cc  gisfacisa.h  gisfacisa_tests.cc  k_facility.cc  k_facility.h  k_facility_tests.cc  null_inst.cc  null_inst.h  null_inst_tests.cc  null_region.cc  null_region.h  null_region_tests.cc  predator.cc  predator.h  prey.cc  prey.h  sink.cc  sink.h  sink_tests.cc  source.cc  source.h  source_tests.cc
cli/: CMakeLists.txt  cyclus.cc  cyclus_unit_test_driver.cc  cycpp.py  cycstub  post-process-cython.py  sidecar.py
cli/inventory/: CMakeLists.txt  README.rst  sql_data_test.go  util.go  walker.go
cmake/: CMakeLists.txt  CopyWhenDiffMacro.cmake  CyclusBuildSetup.cmake  CyclusCPackOptions.cmake.in  DownloadAndExtract.cmake  FindCOIN.cmake  FindCyclus.cmake  FindCython.cmake  FindGlib.cmake  FindGlibmm.cmake  FindHDF5.cmake  FindJinja2.cmake  FindLibXML++.cmake  FindPandas.cmake  FindSigC++.cmake  FindSqlite3.cmake  FindTcmalloc.cmake  LibFindMacros.cmake  ReplicatePythonSourceTree.cmake  SelectLibraryConfigurations.cmake  SetupPyInstall.cmake.in  UseCyclus.cmake  UseCython.cmake  cmake_uninstall.cmake.in
cycamore/: .gitignore  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  DEPENDENCIES.rst  INSTALL.rst  LICENSE.rst  README.rst  circle.yml  rever.xsh  setup.py
cycamore/CMake/: CycamoreCPackOptions.cmake.in  CycamoreModuleMacros.cmake  FindCyclusCore.cmake  Findcycluscore.cmake
cycamore/Models/: CMakeLists.txt
cycamore/Testing/: CMakeLists.txt  ConverterModelTests.cpp  ModelTests.cpp  RegionModelTests.h  StubCommModelTests.cpp
cycamore/cmake/: SelectLibraryConfigurations.cmake
cycamore/conda-recipe/: build.sh  meta.yaml  post-link.sh  pre-link.sh
cycamore/config/: CTestCustom.cmake  generate_test_macros.py  print_regs.py
cycamore/doc/: CMakeLists.txt
cycamore/docker/: README.md
cycamore/examples/: README.rst  agent_entryexit.py  recycle.xml
cycamore/input/: greedy_recycle.xml  recycle.xml
cycamore/news/: decom_reactor.rst
cycamore/scripts/: cymetric
cycamore/src/: CMakeLists.txt  cycamore.h  cycamore_version.h.in  deploy_inst.cc  deploy_inst.h  deploy_inst_tests.cc  enrichment.cc  enrichment.h  enrichment_tests.cc  enrichment_tests.h  fuel_fab.cc  fuel_fab.h  fuel_fab_tests.cc  growth_region.cc  growth_region.h  growth_region_tests.cc  growth_region_tests.h  manager_inst.cc  manager_inst.h  manager_inst_tests.cc  manager_inst_tests.h  mixer.cc  mixer.h  mixer_tests.cc  reactor.cc  reactor.h  reactor_tests.cc  separations.cc  separations.h  separations_tests.cc  sink.cc  sink.h  sink_tests.cc  sink_tests.h  source.cc  source.h  source_tests.cc  source_tests.h  storage.cc  storage.h  (+2 more)
cycamore/tests/: CMakeLists.txt  README.rst  helper.py  run_inputs.py.in  test_regression.py  test_run_inputs.py
cyclus/: CMakeLists.txt  __init__.py  __main__.py  actions.py  agents.pxd  agents.pyx  cpp_cyclus.pxd  cpp_jsoncpp.pxd  cpp_stringstream.pxd  events.pyx  gentypesystem.py  jsoncpp.pxd  jsoncpp.pyx  lazyasd.py  lib.pxd  lib.pyx  main.py  memback.pxd  memback.pyx  nucname.pyx  pyagents.py  server.py  simstate.py  system.py  system.py.in  webapp.py
doc/: .gitignore  CMakeLists.txt  DoxygenLayout.xml  customdoxygen.css  doxy.conf.in  mainpage.dox  release_procedure.rst
doc/domain_model_document/: agents.rst  discrete_materials.rst  facility.rst  glossary.rst  history.rst  institution.rst  main.rst  markets.rst  materials.rst  materials_and_isotopes.rst  messages.rst  metrics.rst  region.rst  resource_exchange.rst  resources.rst  resources_site.rst  timer.rst  (+2 more)
share/: CMakeLists.txt  cyclus-flat.rng.in  cyclus.rng.in  dbtypes.js  dbtypes.json  dbtypes.json.in  dbtypes_gen.py
src/: App.cpp  CMakeLists.txt  Channel.cpp  Channel.h  Commodity.cpp  Commodity.h  Communicator.cpp  Communicator.h  CompMap.cpp  CompMap.h  Composition.cpp  Composition.h  ConvertModel.h  DeckStore.cpp  DeckStore.h  FacFactory.cpp  FacFactory.h  Facility.cpp  Facility.h  FacilityFactory.cpp  FacilityFactory.h  GenException.cpp  GenException.h  GenericResource.cpp  GenericResource.h  H5back_gen.py  InputDB.cpp  InputDB.h  InputXML.cpp  InputXML.h  Inst.cpp  Inst.h  IntrusiveBase.h  IsoVector.cpp  IsoVector.h  LICENSE  LMatrix.cpp  LMatrix.h  Logician.cpp  Logician.h  (+280 more)
stubs/: AUTHORS.rst  CMakeLists.txt  README.rst  example_facility.xml  example_inst.xml  example_region.xml  install.py  license.rst  stub_facility.cc  stub_facility.h  stub_facility_tests.cc  stub_inst.cc  stub_inst.h  stub_inst_tests.cc  stub_market.cc  stub_market.h  stub_region.cc  stub_region.h  stub_region_tests.cc  stub_version.h.in
tests/: CMakeLists.txt  agent_class_tests.cc  agent_tests.cc  agent_tests.h  bear_deploy.py  bid_portfolio_tests.cc  bid_tests.cc  bug1209and1210_test.cc  building_manager_tests.cc  building_manager_tests.h  building_test_helper.cc  building_test_helper.h  capacity_constraint_tests.cc  cbc_solver_tests.cc  commodity_producer_manager_tests.cc  commodity_producer_manager_tests.h  commodity_producer_tests.cc  commodity_producer_tests.h  commodity_recipe_context_tests.cc  commodity_test_helper.cc  commodity_test_helper.h  comp_math_tests.cc  composition_tests.cc  context_tests.cc  csv_back_tests.cc  cyc_arithmetic_tests.cc  cyclus.sqlite  cyclus_unit_test_driver.cc  cycpp_test.py  cycpp_tests.h  cycpp_tests.py  decay_tests.cc  discovery_tests.cc  dummmy.json  dummy_power_recorder.py  dynamic_loading_tests.cc  enrichment_tests.cc  enrichment_tests.h  environment_tests.cc  equality_helpers.h  (+124 more)
(+3528 files in other folders)
